# rina

./: .gitignore  README.md  avinfo.bash  avinfo.py  cli.py  main.py  pyproject.toml  setup.py
avinfo/: __init__.py  __main__.py  _interact.py  _mgs.py  _utils.py  actress.py  arguments.py  birth.py  common.py  concat.py  connection.py  dirtime.py  files.py  idol.py  mgs.json  scandir.py  scraper.py  test.py  useragents.txt  utils.py  video.py  video_scraper.py  videoscraper.py
awk/: avinfo.bash
legacy/: readme.txt
legacy/scripts/: handle_actress.awk  handle_files.awk
rina/: __init__.py  __main__.py  arguments.py  birth.py  concat.py  connection.py  files.py  idol.py  mgs.json  network.py  scandir.py  scraper.py  useragents.json  utils.py  video.py
scripts/: handle_actress.awk  handle_dirs.awk  handle_files.awk
test/: backup.py  test.py
tools/: generate_mgs.py  generate_useragents.py  make_dict.py  make_mgs.py  make_mgs.py.lprof  mgs.json  mgs.py  mgs_scan.json  mgs_scraper.py  mgs_src.json  mgsdata.json  scrape_mgs.py  useragents.py  useragents_src.json
